--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="large-9 columns">
     <ul class="right button-group">
-      <li><a href="#" class="button">Link 1</a></li>
+      <li><%= link_to 'Get Started', new_return_path, class: 'button' %></li>
       <li><a href="#" class="button">Link 2</a></li>
       <li><a href="#" class="button">Link 3</a></li>
       <li><a href="#" class="button">Link 4</a></li>
