Now have the ability to determine the service level you need

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,18 @@
  *= require foundation_and_overrides
 
  */
+
+ .checkbox_container {
+   display: list-item;
+   vertical-align: -1px;
+   margin: 5px;
+ }
+
+ .checkbox_container input {
+   display: list-item;
+ }
+
+ .checkbox_container .collection_check_boxes{
+   display: list-item;
+   vertical-align: -5px;
+ }
