--- a/app/views/returns/show.html.erb
+++ b/app/views/returns/show.html.erb
@@ -1,1 +1,76 @@
-<%= @service_determination %>
+<div class="row">
+  <div class="large-12 columns">
+    <div class="nav-bar right">
+      <ul class="button-group">
+        <li><a href="#" class="button">Link 1</a></li>
+        <li><a href="#" class="button">Link 2</a></li>
+        <li><a href="#" class="button">Link 3</a></li>
+        <li><a href="#" class="button">Link 4</a></li>
+      </ul>
+    </div>
+    <h1>File.me <small>Your return's service level:</small></h1>
+    <hr/>
+  </div>
+</div>
+
+<div class="row">
+
+  <div class="large-9 columns" role="content">
+
+    <article>
+      'You can probably handle this yourself'
+
+      'You probably need some help with your return'
+      else
+      'You should probably see a CPA'
+
+      <h3><a href="#"><%= @service_determination %></a></h3>
+        <% if @service_determination ==  'You can probably handle this yourself' %>
+          <div class="row">
+            <div class="large-6 columns">
+              <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa.</p>
+              <p>Boudin aliqua adipisicing rump corned beef. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
+            </div>
+            <div class="large-6 columns">
+              <img src="http://placehold.it/400x240&text=[img]"/>
+            </div>
+          </div>
+        <% elsif @service_determination == 'You probably need some help with your return' %>
+          <div class="row">
+            <div class="large-6 columns">
+              <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa.</p>
+              <p>Boudin aliqua adipisicing rump corned beef. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
+            </div>
+            <div class="large-6 columns">
+              <img src="http://placehold.it/400x240&text=[img]"/>
+            </div>
+          </div>
+        <% else %>
+          <div class="row">
+            <div class="large-6 columns">
+              <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa.</p>
+              <p>Boudin aliqua adipisicing rump corned beef. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
+            </div>
+            <div class="large-6 columns">
+              <img src="http://placehold.it/400x240&text=[img]"/>
+            </div>
+          </div>
+        <% end %>
+    </article>
+
+    <hr/>
+
+  </div>
+
+</div>
+
+<footer class="row">
+  <div class="large-12 columns">
+    <hr/>
+    <div class="row">
+      <div class="large-6 columns">
+        <p>© Copyright 2015.</p>
+      </div>
+    </div>
+  </div>
+</footer>
