passing validation for email addresses

--- a/app/views/returns/edit.html.erb
+++ b/app/views/returns/edit.html.erb
@@ -35,7 +35,7 @@
         <%= f.label 'What state do you live in?' %>
         <%= f.select :filer_state, options_for_select(us_states) %>
 
-        <%= f.label :filer_email, 'Email address?' %>
+        <%= f.label :filer_email, 'What is your email address?' %>
         <%= f.text_field :filer_email %>
 
         <%= f.label 'Select all of the following that apply to you:' %>
