--- a/app/views/returns/edit.html.erb
+++ b/app/views/returns/edit.html.erb
@@ -61,7 +61,7 @@
     <hr />
     <div class="row">
       <div class="large-6 columns">
-        <p>© Copyright 2015.</p>
+        <p>© Copyright File.me 2015.</p>
       </div>
       <div class="large-6 columns">
         <ul class="inline-list right">
