--- a/app/views/returns/show.html.erb
+++ b/app/views/returns/show.html.erb
@@ -64,7 +64,7 @@
     <hr/>
     <div class="row">
       <div class="large-6 columns">
-        <p>© Copyright 2015.</p>
+        <p>© Copyright File.me 2015.</p>
       </div>
     </div>
   </div>
