--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -76,7 +76,7 @@
     <hr />
     <div class="row">
       <div class="large-6 columns">
-        <p>© Copyright no one at all. Go to town.</p>
+        <p>© Copyright File.me 2015.</p>
       </div>
       <div class="large-6 columns">
         <ul class="inline-list right">
