--- a/app/views/returns/new.html.erb
+++ b/app/views/returns/new.html.erb
@@ -6,7 +6,7 @@
       <ul class="button-group">
       </ul>
     </div>
-    <h1>File.me </h1>
+    <h1><%= link_to 'file.me', root_path %></h1>
     <hr />
   </div>
 </div>
@@ -23,7 +23,7 @@
 
     <article>
 
-      <h3><a href="#">The Basics:</a></h3>
+      <h3>The Basics:</h3>
 
       <div class="row">
         <div class="large-6 columns">
@@ -76,7 +76,7 @@
     <hr />
     <div class="row">
       <div class="large-6 columns">
-        <p>© Copyright File.me 2015.</p>
+        <p>© 2015 file.me.</p>
       </div>
       <div class="large-6 columns">
         <ul class="inline-list right">
