--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="large-3 columns">
-    <h1>File.me</h1>
+    <h1>file.me</h1>
   </div>
   <div class="large-9 columns">
     <ul class="right button-group">
       <li><%= link_to 'Get Started', new_return_path, class: 'button' %></li>
-      <li><a href="#" class="button">Link 2</a></li>
-      <li><a href="#" class="button">Link 3</a></li>
-      <li><a href="#" class="button">Link 4</a></li>
+      <li><a href="#" class="button">Blog</a></li>
+      <li><a href="#" class="button">About</a></li>
+      <li><a href="#" class="button">Links</a></li>
     </ul>
   </div>
 </div>
@@ -76,7 +76,7 @@
     <hr />
     <div class="row">
       <div class="large-6 columns">
-        <p>© Copyright File.me 2015.</p>
+        <p>© 2015 file.me.</p>
       </div>
       <div class="large-6 columns">
         <ul class="inline-list right">
