Changing logic, adding another strong param

--- a/app/views/returns/show.html.erb
+++ b/app/views/returns/show.html.erb
@@ -20,6 +20,7 @@
     <article>
 
       <h3><a href="#"><%= @service_determination %></a></h3>
+      <h3>Your score is: <%= @score %> </h3>
         <% if @service_determination == 'You can probably handle this yourself' %>
           <div class="row">
             <div class="large-6 columns">
