--- a/app/views/returns/show.html.erb
+++ b/app/views/returns/show.html.erb
@@ -8,7 +8,7 @@
         <li><a href="#" class="button">Link 4</a></li>
       </ul>
     </div>
-    <h1><%= link_to 'file.me', root_path %><small>Your return's service level:</small></h1>
+    <h1><%= link_to 'file.me', root_path %><small> Your return's service level:</small></h1>
     <hr/>
   </div>
 </div>
@@ -65,7 +65,7 @@
     <hr/>
     <div class="row">
       <div class="large-6 columns">
-        <p>© 2015 file.me.</p>
+        <p>© 2015 file.me</p>
       </div>
     </div>
   </div>
