--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,10 +4,9 @@
   </div>
   <div class="large-9 columns">
     <ul class="right button-group">
-      <li><%= link_to 'Get Started', new_return_path, class: 'button' %></li>
-      <li><a href="#" class="button">Blog</a></li>
       <li><a href="#" class="button">About</a></li>
-      <li><a href="#" class="button">Links</a></li>
+      <li><a href="#" class="button">Blog</a></li>
+      <li><a href="#" class="button">Contact Us</a></li>
     </ul>
   </div>
 </div>
@@ -21,7 +20,9 @@
     <div id="slider">
       <img src="http://placehold.it/1000x400&text=[ img 1 ]" />
     </div>
-
+    <div style="text-align: center;">
+      <%= link_to 'Get Started', new_return_path, class: 'button' %>
+    </div>
     <hr />
   </div>
 </div>
@@ -49,26 +50,6 @@
 
 </div>
 
-<!-- Call to Action Panel -->
-<div class="row">
-  <div class="large-12 columns">
-
-    <div class="panel">
-      <h4>Get in touch!</h4>
-
-      <div class="row">
-        <div class="large-9 columns">
-          <p>We'd love to hear from you, you attractive person you.</p>
-        </div>
-        <div class="large-3 columns">
-          <a href="#" class="radius button right">Contact Us</a>
-        </div>
-      </div>
-    </div>
-
-  </div>
-</div>
-
 <!-- Footer -->
 
 <footer class="row">
@@ -76,12 +57,12 @@
     <hr />
     <div class="row">
       <div class="large-6 columns">
-        <p>© 2015 file.me.</p>
+        <p>© 2015 file.me</p>
       </div>
       <div class="large-6 columns">
         <ul class="inline-list right">
-          <li><a href="#">Link 1</a></li>
-          <li><a href="#">Link 2</a></li>
+          <li><a href="#">Terms of Service</a></li>
+          <li><a href="#">Privacy Policy</a></li>
           <li><a href="#">Link 3</a></li>
           <li><a href="#">Link 4</a></li>
         </ul>
