Added blog page and about us pages, updated main page copy content

--- a/app/views/returns/edit.html.erb
+++ b/app/views/returns/edit.html.erb
@@ -13,7 +13,6 @@
 
 <!-- End Nav -->
 
-
 <!-- Main Page Content and Sidebar -->
 
 <div class="row">
@@ -65,10 +64,8 @@
       </div>
       <div class="large-6 columns">
         <ul class="inline-list right">
-          <li><a href="#">Link 1</a></li>
-          <li><a href="#">Link 2</a></li>
-          <li><a href="#">Link 3</a></li>
-          <li><a href="#">Link 4</a></li>
+          <li><a href="#">Terms of Use</a></li>
+          <li><a href="#">Privacy Policy</a></li>
         </ul>
       </div>
     </div>
