--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,8 +4,8 @@
   </div>
   <div class="large-9 columns">
     <ul class="right button-group">
-      <li><a href="#" class="button">About</a></li>
-      <li><a href="#" class="button">Blog</a></li>
+      <li><%= link_to 'About', about_path, class: 'button' %></li>
+      <li><%= link_to 'Blog', blog_path, class: 'button' %></li>
       <li><a href="#" class="button">Contact Us</a></li>
     </ul>
   </div>
@@ -33,19 +33,19 @@
   <div class="large-4 columns">
     <img src="http://placehold.it/400x300&text=[img]" />
     <h4>This is a content section.</h4>
-    <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
+    <p>Every year there comes a time where we all have to file our annual tax return. Along with that knowledge comes the thought ‘Is this the year where I need help with it?’ Don’t worry! It’s a question that we all ask ourselves.</p>
   </div>
 
   <div class="large-4 columns">
     <img src="http://placehold.it/400x300&text=[img]" />
     <h4>This is a content section.</h4>
-    <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
+    <p>There are many different things that can happen that can make your return go from something that is simple and only takes 20 minutes to prepare on your own to something far more complex that could take days of the most qualified CPA’s time.</p>
   </div>
 
   <div class="large-4 columns">
     <img src="http://placehold.it/400x300&text=[img]" />
     <h4>This is a content section.</h4>
-    <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
+    <p>file.me provides a tool to help you go in the right direction, and what service level you probably need for your return. We have a short series of questions that help discover what service level you might need, and then provide the links to those services that best match your need.</p>
   </div>
 
 </div>
@@ -63,8 +63,6 @@
         <ul class="inline-list right">
           <li><a href="#">Terms of Service</a></li>
           <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Link 3</a></li>
-          <li><a href="#">Link 4</a></li>
         </ul>
       </div>
     </div>
