--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="large-3 columns">
-    <h1>file.me</h1>
+    <h1><%= image_tag "/logo/logo.jpg" %></h1>
   </div>
   <div class="large-9 columns">
     <ul class="right button-group">
