Added the logo and made it a clickable link to each page

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="large-3 columns">
-    <h1><%= image_tag "/logo/logo.jpg" %></h1>
+    <h1><%= link_to image_tag('/logo/logo.jpg'), root_path %></h1>
   </div>
   <div class="large-9 columns">
     <ul class="inline-list right">
