--- a/app/views/welcome/blog.html.erb
+++ b/app/views/welcome/blog.html.erb
@@ -8,6 +8,9 @@
         <li><a href="#" class="button">Link 4</a></li>
       </ul>
     </div>
+    <div class="large-3 columns">
+      <h1><%= link_to image_tag('/logo/logo.jpg'), root_path %></h1>
+    </div>
     <h1>Blog <small>This is my blog. It's awesome.</small></h1>
     <hr/>
   </div>
