--- a/app/views/returns/edit.html.erb
+++ b/app/views/returns/edit.html.erb
@@ -6,7 +6,9 @@
       <ul class="button-group">
       </ul>
     </div>
-    <h1><%= link_to 'file.me', root_path %></h1>
+    <div class="large-3 columns">
+      <h1><%= link_to image_tag('/logo/logo.jpg'), root_path %></h1>
+    </div>
     <hr />
   </div>
 </div>
