--- a/app/views/returns/new.html.erb
+++ b/app/views/returns/new.html.erb
@@ -6,7 +6,9 @@
       <ul class="button-group">
       </ul>
     </div>
-    <h1><%= link_to 'file.me', root_path %></h1>
+    <div class="large-3 columns">
+      <h1><%= link_to image_tag('/logo/logo.jpg'), root_path %></h1>
+    </div>
     <hr />
   </div>
 </div>
@@ -41,7 +43,7 @@
         <h5>Type of return I need help with:</h5>
         <%= form_for @return do |f| %>
         <%= f.select :return_type, ['Individual','Trust','Estate', 'Partnership', 'Corporate'] %>
-        <%=f.submit 'Submit' %>
+        <%=f.submit 'Submit'%>
         <% end %>
       </div>
     </article>
