--- a/app/views/returns/show.html.erb
+++ b/app/views/returns/show.html.erb
@@ -8,7 +8,9 @@
         <li><a href="#" class="button">Link 4</a></li>
       </ul>
     </div>
-    <h1><%= link_to 'file.me', root_path %><small> Your return's service level:</small></h1>
+    <div class="large-3 columns">
+      <h1><%= link_to image_tag('/logo/logo.jpg'), root_path %><small> Your return's service level:</small></h1>
+    </div>
     <hr/>
   </div>
 </div>
