Adding in the mailer and working on ActiveModel for mailing a contact us form to admin

--- a/app/views/returns/show.html.erb
+++ b/app/views/returns/show.html.erb
@@ -9,8 +9,9 @@
       </ul>
     </div>
     <div class="large-3 columns">
-      <h1><%= link_to image_tag('/logo/logo.jpg'), root_path %><small> Your return's service level:</small></h1>
+      <h1><%= link_to image_tag('/logo/logo.jpg'), root_path %></h1>
     </div>
+
     <hr/>
   </div>
 </div>
