--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
     <ul class="right button-group">
       <li><%= link_to 'About', about_path, class: 'button' %></li>
       <li><%= link_to 'Blog', blog_path, class: 'button' %></li>
-      <li><a href="#" class="button">Contact Us</a></li>
+      <li><%= link_to 'Contact Us', new_contact_form_path, class: 'button' %></li>
     </ul>
   </div>
 </div>
