--- a/app/views/returns/new.html.erb
+++ b/app/views/returns/new.html.erb
@@ -28,8 +28,8 @@
 
       <div class="row">
         <div class="large-6 columns">
-          <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa.</p>
-          <p>Boudin aliqua adipisicing rump corned beef. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
+          <p>There are many things that need to be taken into consideration when looking for the right tax service. Do you want them to be close to where you live? Certain services and firms may be more expensive than another. Keep these in mind as you go through the steps that follow, and make sure that you’ve filled it out accurately.</p>
+          <p>To begin select the type of return that you need help with below. Keep in mind that services like H&R Block and Turbo Tax do not work on certain types of returns, and as a result if selected we will suggest that you see a CPA instead of the other alternatives.</p>
         </div>
         <div class="large-6 columns">
           <img src="http://placehold.it/400x240&text=[img]" />
