--- a/app/views/returns/show.html.erb
+++ b/app/views/returns/show.html.erb
@@ -27,8 +27,8 @@
         <% if @service_determination == 'You can probably handle this yourself' %>
           <div class="row">
             <div class="large-6 columns">
-              <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa.</p>
-              <p>Boudin aliqua adipisicing rump corned beef. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
+              <p>Based on what you have selected on the previous page you can probably handle your return yourself. There are some great web services available that will allow you to file your return easily. You’ve got this!</p>
+              <p>We’ve provided the links to a few service providers below that will match up best with what you’ve entered. Remember you can always move up if you want!</p>
             </div>
             <div class="large-6 columns">
               <img src="http://placehold.it/400x240&text=[img]"/>
