adding language for the different show page renderings

--- a/app/views/returns/show.html.erb
+++ b/app/views/returns/show.html.erb
@@ -37,8 +37,8 @@
         <% elsif @service_determination == 'You probably need some help with your return' %>
           <div class="row">
             <div class="large-6 columns">
-              <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa.</p>
-              <p>Boudin aliqua adipisicing rump corned beef. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
+              <p>Based on your selections made on the previous page you might need a little help with your return. There are some great low cost service providers that can provide you with the help that you need. </p>
+              <p>We’ve provided the links to a few service providers below that will match up best with what you’ve entered. Remember you can always move up if you want!</p>
             </div>
             <div class="large-6 columns">
               <img src="http://placehold.it/400x240&text=[img]"/>
@@ -47,8 +47,8 @@
         <% else %>
           <div class="row">
             <div class="large-6 columns">
-              <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa.</p>
-              <p>Boudin aliqua adipisicing rump corned beef. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
+              <p>Based on your selections made on the previous page you probably need quite a bit of help with your return. There are some great CPA firms out there that are ready and willing to help you prepare your return.</p>
+              <p>We’ve provided the links to a few CPA firms below that provide a variety of services. Remember that each firm is different and that some provide services beyond tax return preparation.</p>
             </div>
             <div class="large-6 columns">
               <img src="http://placehold.it/400x240&text=[img]"/>
