--- a/app/views/contact_forms/new.html.erb
+++ b/app/views/contact_forms/new.html.erb
@@ -8,8 +8,8 @@
     <p>We'd love to hear from you. You can either reach out to us as a whole and one of our awesome team members will get back to you, or if you have a specific question reach out to one of our staff. We love getting email all day <em>all day</em>.</p>
     <div class="section-container tabs" data-section>
       <section class="section">
-        <% if @return.errors.any? %>
-          <% @return.errors.full_messages.each do |msg| %>
+        <% if @contact_form.errors.any? %>
+          <% @contact_form.errors.full_messages.each do |msg| %>
             <%= msg %>
             <% end %>
         <% end %>
