--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,45 +1,25 @@
 <div class="row">
   <div class="large-3 columns">
-    <h1><%= link_to image_tag('/logo/logo.jpg'), root_path %></h1>
+    <h1><%= image_tag "/logo/logo.jpg" %></h1>
   </div>
   <div class="large-9 columns">
-    <ul class="inline-list right">
-      <li><a href="#">Section 1</a></li>
-      <li><a href="#">Section 2</a></li>
-      <li><a href="#">Section 3</a></li>
-      <li><a href="#">Section 4</a></li>
+    <ul class="right button-group">
+      <li><%= link_to 'Home', root_path, class: 'button' %></li>
+      <li><%= link_to 'Blog', blog_path, class: 'button' %></li>
+      <li><%= link_to 'Contact Us', new_contact_form_path, class: 'button' %></li>
     </ul>
   </div>
 </div>
 
 <div class="row">
 
-  <div class="large-9 push-3 columns">
+  <div class="large-9 columns">
 
-    <h3>About us <small>Page subtitle</small></h3>
+    <h3>About us: <small>A little background into file.me</small></h3>
 
-    <p>Bacon ipsum dolor sit amet salami ham hock biltong ball tip drumstick sirloin pancetta meatball short loin. Venison tail chuck pork chop, andouille ball tip beef ribs flank boudin bacon. Salami andouille pork belly short ribs flank cow. Salami sirloin turkey kielbasa. Sausage venison pork loin leberkas chuck short loin, cow ham prosciutto pastrami jowl. Ham hock jerky tri-tip, fatback hamburger shoulder swine pancetta ground round. Tri-tip prosciutto meatball turkey, brisket spare ribs shankle chuck cow chicken ham hock boudin meatloaf jowl.</p>
+    <p>file.me was developed from an idea had by a licensed CPA from Massachusetts. As more and more of his friends began asking ‘Do I need to see a CPA because of this?’ or ‘Do you think I can do my return myself?’ he decided that there needed to be a tool to help people make that decision. Thinking that there was an unaddressed need in the marketplace to help people not only make that decision, but to then find the right tax service for them. </p>
 
-    <p>Ground round pastrami pork loin tenderloin jerky. Jerky spare ribs biltong, ham hock ham capicola pork. Jerky turducken pork, meatloaf sausage capicola swine corned beef turkey short loin. Tongue prosciutto pork loin, ground round spare ribs venison kielbasa strip steak.</p>
-
-    <p>Hamburger bresaola turkey t-bone, leberkas salami pork chop ham hock beef ribs. Rump biltong meatball venison, short ribs pork loin shank shankle corned beef beef. Cow salami jowl short loin hamburger fatback. Short ribs pork belly shoulder pastrami drumstick salami corned beef ham hock bresaola. Swine filet mignon cow sausage ball tip. Cow ribeye ground round, sausage pork loin pig beef ball tip turkey boudin.</p>
-
-    <p>Prosciutto ball tip filet mignon andouille frankfurter chicken rump sausage meatball. Filet mignon meatloaf ground round andouille ham hock pork. Bresaola short loin meatball chuck hamburger pig. Turkey venison chuck, tongue fatback tail swine jerky corned beef shank kielbasa prosciutto ribeye ham tri-tip. Rump bacon pork belly meatloaf shoulder short loin meatball kielbasa pork loin tongue bresaola brisket corned beef jowl prosciutto. Beef ribs shankle short ribs pork belly corned beef fatback pork chop tongue biltong boudin strip steak sirloin meatloaf pancetta.</p>
-
-  </div>
-
-  <div class="large-3 pull-9 columns">
-
-    <ul class="side-nav">
-      <li><a href="#">Section 1</a></li>
-      <li><a href="#">Section 2</a></li>
-      <li><a href="#">Section 3</a></li>
-      <li><a href="#">Section 4</a></li>
-      <li><a href="#">Section 5</a></li>
-      <li><a href="#">Section 6</a></li>
-    </ul>
-
-    <p><img src="http://placehold.it/320x240&text=Ad"/></p>
+    <p>Our goal is making that decision to get tax help as easy as possible, and once that decision has been made to help our users find the best firm or service that matches their need. Whether it be to point them in the direction of an online solution like TaxAct or TurboTax, a middle of the road provider like H&R Block, or they need a truly robust solution like a CPA firm. </p>
 
   </div>
 
@@ -50,15 +30,7 @@
     <hr/>
     <div class="row">
       <div class="large-6 columns">
-        <p>© Copyright no one at all. Go to town.</p>
-      </div>
-      <div class="large-6 columns">
-        <ul class="inline-list right">
-          <li><a href="#">Section 1</a></li>
-          <li><a href="#">Section 2</a></li>
-          <li><a href="#">Section 3</a></li>
-          <li><a href="#">Section 4</a></li>
-        </ul>
+        <p>© 2015 file.me</p>
       </div>
     </div>
   </div>
