--- a/app/views/welcome/blog.html.erb
+++ b/app/views/welcome/blog.html.erb
@@ -2,18 +2,17 @@
   <div class="large-12 columns">
     <div class="nav-bar right">
       <ul class="button-group">
-        <li><a href="#" class="button">Link 1</a></li>
-        <li><a href="#" class="button">Link 2</a></li>
-        <li><a href="#" class="button">Link 3</a></li>
-        <li><a href="#" class="button">Link 4</a></li>
+        <li><%= link_to 'Home', root_path, class: 'button' %></li>
+        <li><%= link_to 'About', about_path, class: 'button' %></li>
+        <li><%= link_to 'Contact Us', new_contact_form_path, class: 'button' %></li>
       </ul>
     </div>
     <div class="large-3 columns">
       <h1><%= link_to image_tag('/logo/logo.jpg'), root_path %></h1>
     </div>
-    <h1>Blog <small>This is my blog. It's awesome.</small></h1>
-    <hr/>
   </div>
+  <h1>file.me Blog <small>A blog filled with awesome</small></h1>
+  <hr/>
 </div>
 
 <div class="row">
@@ -22,73 +21,21 @@
 
     <article>
 
-      <h3><a href="#">Blog Post Title</a></h3>
-      <h6>Written by <a href="#">John Smith</a> on August 12, 2012.</h6>
+      <h3>First post!</h3>
+      <h6>Written by <a href="#">Patrick Kennedy</a> on February, 26 2015.</h6>
 
       <div class="row">
         <div class="large-6 columns">
-          <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa.</p>
-          <p>Boudin aliqua adipisicing rump corned beef. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-        </div>
-        <div class="large-6 columns">
-          <img src="http://placehold.it/400x240&text=[img]"/>
+          <p>Welcome to file.me! I'll be posting more updates as the site and app progress, as well as informative links on current tax related news and legislation.</p>
+          <p>In the meantime, please feel free to look around the site and let me know what you think though the Contact Us page!</p>
+
         </div>
       </div>
-
-      <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-
-      <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-
     </article>
 
     <hr/>
 
-    <article>
-
-      <h3><a href="#">Blog Post Title</a></h3>
-      <h6>Written by <a href="#">John Smith</a> on August 12, 2012.</h6>
-
-      <div class="row">
-        <div class="large-6 columns">
-          <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa.</p>
-          <p>Boudin aliqua adipisicing rump corned beef. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-        </div>
-        <div class="large-6 columns">
-          <img src="http://placehold.it/400x240&text=[img]"/>
-        </div>
-      </div>
-
-      <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-
-      <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-
-    </article>
-
   </div>
-
-
-
-
-
-
-  <aside class="large-3 columns">
-
-    <h5>Categories</h5>
-    <ul class="side-nav">
-      <li><a href="#">News</a></li>
-      <li><a href="#">Code</a></li>
-      <li><a href="#">Design</a></li>
-      <li><a href="#">Fun</a></li>
-      <li><a href="#">Weasels</a></li>
-    </ul>
-
-    <div class="panel">
-      <h5>Featured</h5>
-      <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow.</p>
-      <a href="#">Read More →</a>
-    </div>
-
-  </aside>
 
 </div>
 
@@ -97,15 +44,7 @@
     <hr/>
     <div class="row">
       <div class="large-6 columns">
-        <p>© Copyright no one at all. Go to town.</p>
-      </div>
-      <div class="large-6 columns">
-        <ul class="inline-list right">
-          <li><a href="#">Link 1</a></li>
-          <li><a href="#">Link 2</a></li>
-          <li><a href="#">Link 3</a></li>
-          <li><a href="#">Link 4</a></li>
-        </ul>
+        <p>© 2015 file.me</p>
       </div>
     </div>
   </div>
