--- a/app/views/returns/show.html.erb
+++ b/app/views/returns/show.html.erb
@@ -2,10 +2,10 @@
   <div class="large-12 columns">
     <div class="nav-bar right">
       <ul class="button-group">
-        <li><a href="#" class="button">Link 1</a></li>
-        <li><a href="#" class="button">Link 2</a></li>
-        <li><a href="#" class="button">Link 3</a></li>
-        <li><a href="#" class="button">Link 4</a></li>
+        <li><%= link_to 'Home', root_path, class: 'button' %></li>
+        <li><%= link_to 'About', about_path, class: 'button' %></li>
+        <li><%= link_to 'Blog', blog_path, class: 'button' %></li>
+        <li><%= link_to 'Contact Us', new_contact_form_path, class: 'button' %></li>
       </ul>
     </div>
     <div class="large-3 columns">
