Adding in formatting and pics to several pages

--- a/app/views/returns/new.html.erb
+++ b/app/views/returns/new.html.erb
@@ -32,7 +32,7 @@
           <p>To begin select the type of return that you need help with below. Keep in mind that services like H&R Block and Turbo Tax do not work on certain types of returns, and as a result if selected we will suggest that you see a CPA instead of the other alternatives.</p>
         </div>
         <div class="large-6 columns">
-          <img src="http://placehold.it/400x240&text=[img]" />
+          <img src="/pics/takingnotes.jpg" />
         </div>
       </div>
 
@@ -66,12 +66,6 @@
     <div class="row">
       <div class="large-6 columns">
         <p>© 2015 file.me</p>
-      </div>
-      <div class="large-6 columns">
-        <ul class="inline-list right">
-          <li><a href="#">Terms of Service</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-        </ul>
       </div>
     </div>
   </div>
