--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -18,7 +18,7 @@
 <div class="row">
   <div class="large-12 columns">
     <div id="slider">
-      <img src="http://placehold.it/1000x400&text=[ img 1 ]" />
+      <img src="/pics/BWkeyboardslice.jpg" />
     </div>
     <div style="text-align: center;">
       <%= link_to 'Get Started', new_return_path, class: 'button' %>
@@ -31,19 +31,19 @@
 
 <div class="row">
   <div class="large-4 columns">
-    <img src="http://placehold.it/400x300&text=[img]" />
+    <img src="/pics/Laptopcoffee.jpg"/>
     <h4>It happens to everyone...</h4>
     <p>Every year there comes a time where we all have to file our annual tax return. Along with that knowledge comes the thought ‘Is this the year where I need help with it?’ Don’t worry! It’s a question that we all ask ourselves.</p>
   </div>
 
   <div class="large-4 columns">
-    <img src="http://placehold.it/400x300&text=[img]" />
+    <img src="/pics/Laptoptable.jpg" />
     <h4>Why this happens...</h4>
     <p>There are many different things that can happen that can make your return go from something that is simple and only takes 20 minutes to prepare on your own to something far more complex that could take days of the most qualified CPA’s time.</p>
   </div>
 
   <div class="large-4 columns">
-    <img src="http://placehold.it/400x300&text=[img]" />
+    <img src="/pics/takingnotes.jpg" />
     <h4>What we can do to help...</h4>
     <p>file.me provides a tool to help you go in the right direction, and what service level you probably need for your return. We have a short series of questions that help discover what service level you might need, and then provide the links to those services that best match your need.</p>
   </div>
