--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,18 +15,6 @@
 
 <!-- First Band (Slider) -->
 
-<div class="row">
-  <div class="large-12 columns">
-    <div id="slider">
-      <img src="/pics/BWkeyboardslice.jpg" />
-    </div>
-    <div style="text-align: center;">
-      <%= link_to 'Get Started', new_return_path, class: 'button' %>
-    </div>
-    <hr />
-  </div>
-</div>
-
 <!-- Three-up Content Blocks -->
 
 <div class="row">
@@ -47,7 +35,9 @@
     <h4>What we can do to help...</h4>
     <p>file.me provides a tool to help you go in the right direction, and what service level you probably need for your return. We have a short series of questions that help discover what service level you might need, and then provide the links to those services that best match your need.</p>
   </div>
-
+  <div style="text-align: center;">
+    <%= link_to 'Get Started', new_return_path, class: 'secondary button' %>
+  </div>
 </div>
 
 <!-- Footer -->
