--- a/app/views/contact_forms/new.html.erb
+++ b/app/views/contact_forms/new.html.erb
@@ -11,32 +11,30 @@
         <% if @contact_form.errors.any? %>
           <% @contact_form.errors.full_messages.each do |msg| %>
             <%= msg %>
-            <% end %>
+          <% end %>
         <% end %>
         <div class="content" data-slug="panel1">
           <form>
             <%= form_for @contact_form do |f| %>
             <div class="row collapse">
               <div class="large-2 columns">
-                <label class="inline">Your Name</label>
+                <label class="inline"><%= f.label :name, 'Your Name' %></label>
               </div>
               <div class="large-10 columns">
-                <%= f.label :name %>
                 <%= f.text_field :name %>
               </div>
             </div>
             <div class="row collapse">
               <div class="large-2 columns">
-                <label class="inline">Your Email</label>
+                <label class="inline"><%= f.label :email, 'Your Email' %></label>
               </div>
               <div class="large-10 columns">
-                <%= f.label :email %>
                 <%= f.text_field :email %>
               </div>
             </div>
-            <label>What's up?</label>
+            <label></label>
               <%= f.label :message %>
-              <%= f.text_area :message %>
+              <%= f.text_area :message, rows: 10 %>
               <%= f.submit 'Send Message' %>
             <% end %>
           </form>
