--- a/app/views/returns/show.html.erb
+++ b/app/views/returns/show.html.erb
@@ -21,7 +21,7 @@
   <div class="large-9 columns" role="content">
 
     <article>
-
+      <!-- <h3>Your Score is: <%= @score %></h3> -->
       <h3><a href="#"><%= @service_determination %></a></h3>
         <% if @service_determination == 'You can probably handle this yourself' %>
           <div class="row">
