adding length validation for the contact form and set error messages to show in red

--- a/app/views/contact_forms/new.html.erb
+++ b/app/views/contact_forms/new.html.erb
@@ -6,11 +6,13 @@
     </div>
     <h3>Get in Touch!</h3>
     <p>We'd love to hear from you. Please shoot us a message about anything in regards to the site.</p></br>
-    <% if @contact_form.errors.any? %>
-      <% @contact_form.errors.full_messages.each do |msg| %>
-        <%= msg %>
+    <div class="error">
+      <% if @contact_form.errors.any? %>
+        <p><% @contact_form.errors.full_messages.each do |msg| %>. </p>
+          <%= msg %>
+        <% end %>
       <% end %>
-    <% end %>
+    </div>
     <div class="section-container tabs" data-section>
       <section class="section">
         <div class="content" data-slug="panel1">
